// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cells with class names renders a table with colgroups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__listbox--header"
      hidden=""
      tabindex="-1"
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          role="presentation"
        >
          <tr
            role="presentation"
          >
            <th
              class="react-combo-boxes-combobox__table-header foo"
              id="id_column_label"
            >
              Foo
            </th>
            <th
              class="react-combo-boxes-combobox__table-header bar"
              id="id_column_type"
            >
              Bar
            </th>
          </tr>
        </thead>
        <tbody
          role="presentation"
        >
          <tr
            aria-labelledby="id_column_label id_option_apple_cell_label id_column_type id_option_apple_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell foo"
              id="id_option_apple_cell_label"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell bar"
              id="id_option_apple_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_column_label id_option_banana_cell_label id_column_type id_option_banana_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell foo"
              id="id_option_banana_cell_label"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell bar"
              id="id_option_banana_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_column_label id_option_potato_cell_label id_column_type id_option_potato_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell foo"
              id="id_option_potato_cell_label"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell bar"
              id="id_option_potato_cell_type"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`cells with html renders a table with colgroups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
      tabindex="-1"
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            aria-labelledby="id_option_apple_cell_label id_option_apple_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
          >
            <td
              class="foo"
              id="id_option_apple_cell_label"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="bar"
              id="id_option_apple_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_option_banana_cell_label id_option_banana_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
          >
            <td
              class="foo"
              id="id_option_banana_cell_label"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="bar"
              id="id_option_banana_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_option_potato_cell_label id_option_potato_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
          >
            <td
              class="foo"
              id="id_option_potato_cell_label"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="bar"
              id="id_option_potato_cell_type"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns as names only renders a table as the list box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
      tabindex="-1"
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            aria-labelledby="id_option_apple_cell_label id_option_apple_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_label"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_option_banana_cell_label id_option_banana_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_label"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_option_potato_cell_label id_option_potato_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_label"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_type"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
          <tr
            aria-disabled="true"
            aria-labelledby="id_option_tomato_cell_label id_option_tomato_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_tomato"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_tomato_cell_label"
              role="presentation"
            >
              Tomato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_tomato_cell_type"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns with headers renders a table with headers 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__listbox--header"
      hidden=""
      tabindex="-1"
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          role="presentation"
        >
          <tr
            role="presentation"
          >
            <th
              class="react-combo-boxes-combobox__table-header"
              id="id_column_label"
            >
              Name
            </th>
            <th
              class="react-combo-boxes-combobox__table-header"
              id="id_column_type"
            >
              Type
            </th>
          </tr>
        </thead>
        <tbody
          role="presentation"
        >
          <tr
            aria-labelledby="id_column_label id_option_apple_cell_label id_column_type id_option_apple_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_label"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_column_label id_option_banana_cell_label id_column_type id_option_banana_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_label"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_column_label id_option_potato_cell_label id_column_type id_option_potato_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_label"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_type"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns with html renders a table with colgroups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
      tabindex="-1"
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col
            class="foo"
          />
          <col
            class="bar"
          />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            aria-labelledby="id_option_apple_cell_label id_option_apple_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_label"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_option_banana_cell_label id_option_banana_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_label"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_type"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            aria-labelledby="id_option_potato_cell_label id_option_potato_cell_type"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_label"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_type"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`grouped renders a table with groups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__false"
      hidden=""
      tabindex="-1"
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-combobox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-group-header"
              colspan="2"
              id="id_group_fruit"
            >
              Fruit
            </th>
          </tr>
          <tr
            aria-labelledby="id_group_fruit id_option_apple_cell_name id_option_apple_cell_colour"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_apple"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_name"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_apple_cell_colour"
              role="presentation"
            >
              Green
            </td>
          </tr>
          <tr
            aria-labelledby="id_group_fruit id_option_banana_cell_name id_option_banana_cell_colour"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_banana"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_name"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_banana_cell_colour"
              role="presentation"
            >
              Yellow
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-group-header"
              colspan="2"
              id="id_group_vegetable"
            >
              Vegetable
            </th>
          </tr>
          <tr
            aria-labelledby="id_group_vegetable id_option_potato_cell_name id_option_potato_cell_colour"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_potato"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_name"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_potato_cell_colour"
              role="presentation"
            >
              Brown
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`grouped with columns with headers renders a table with headers 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      class="react-combo-boxes-combobox__down-arrow"
      id="id_down_arrow"
    />
    <span
      aria-label="Clear"
      aria-labelledby="id_clear_button id-label id"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
      role="button"
      tabindex="-1"
    />
    <div
      class="react-combo-boxes-combobox__listbox react-combo-boxes-combobox__listbox--header"
      hidden=""
      tabindex="-1"
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-combobox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          role="presentation"
        >
          <tr
            role="presentation"
          >
            <th
              class="react-combo-boxes-combobox__table-header"
              id="id_column_label"
            >
              Name
            </th>
            <th
              class="react-combo-boxes-combobox__table-header"
              id="id_column_colour"
            >
              Colour
            </th>
          </tr>
        </thead>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-combobox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-group-header"
              colspan="2"
              id="id_group_fruit"
            >
              Fruit
            </th>
          </tr>
          <tr
            aria-labelledby="id_group_fruit id_column_label id_option__cell_label id_column_colour id_option__cell_colour"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option__cell_label"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option__cell_colour"
              role="presentation"
            >
              Green
            </td>
          </tr>
          <tr
            aria-labelledby="id_group_fruit id_column_label id_option_1_cell_label id_column_colour id_option_1_cell_colour"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_1"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_1_cell_label"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_1_cell_colour"
              role="presentation"
            >
              Yellow
            </td>
          </tr>
          <tr
            class="react-combo-boxes-combobox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-combobox__table-group-header"
              colspan="2"
              id="id_group_vegetable"
            >
              Vegetable
            </th>
          </tr>
          <tr
            aria-labelledby="id_group_vegetable id_column_label id_option_2_cell_label id_column_colour id_option_2_cell_colour"
            class="react-combo-boxes-combobox__table-row"
            id="id_option_2"
            role="option"
          >
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_2_cell_label"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-combobox__table-cell"
              id="id_option_2_cell_colour"
              role="presentation"
            >
              Brown
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
